# metabot.calendars.google

./: .cirrus.yml  .gitignore  activate  pyproject.toml  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
metabot/calendars/: google.py  test_google.py
